fixed spacing with nav bar

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,5 @@
 
+.content-body{margin:4px;}
 .brick.small {
     width: 140px;
     height: 140px;
@@ -95,6 +96,7 @@
     box-shadow: 0px 1px 1px #4A494B;
     background-color: white;
     position:fixed;
+    top:0px;
     z-index: 1;
 
 }
@@ -110,5 +112,5 @@
 
 
 #page-render {
-    margin-top: 50px;
+    margin-top: 30px;
 }
